# mojo_muse

./: README.md  TODO.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: devguide.md
src/mojo_muse/: __init__.py  _types.py  auth.py  cli.py  collector.py  core.py  evaluator.py  exceptions.py  finders.py  pep425tags.py  preparer.py  project.py  session.py  termui.py  utils.py
src/mojo_muse/builders/: __init__.py  base.py  editable.py  prepared.py  wheel.py
src/mojo_muse/core/: __init__.py  plumbing.py  porcelain.py
src/mojo_muse/environments/: __init__.py
src/mojo_muse/formats/: __init__.py  base.py
src/mojo_muse/in_process/: __init__.py  get_abi_tag.py  parse_setup.py  sysconfig_get_paths.py
src/mojo_muse/installers/: __init__.py  installers.py  manager.py  packages.py  synchronizers.py  uninstallers.py
src/mojo_muse/models/: backends.py  caches.py  candidates.py  config.py  info.py  link.py  markers.py  project_file.py  python.py  repositories.py  requirements.py  search.py  setup.py  specifiers.py  toml_file.py  venv.py  working_set.py
src/mojo_muse/models/vcs/: __init__.py  base.py
src/mojo_muse/project/: __init__.py  base.py  config.py  core.py  environments.py  filters.py  lockfile.py  project_file.py  repositories.py  toml_file.py  venv.py
src/mojo_muse/resolver/: __init__.py  mojo.py  providers.py  python.py  reporters.py
src/mojo_muse/templates/: __init__.py
src/mojo_muse/templates/pyproject/: pyproject.toml
tasks/: max_versions.py
tests/unit/: conftest.py  test_auth.py  test_cli.py  test_exceptions.py  test_project.py  test_session.py  test_termui.py  test_utils.py
tests/unit/models/: test_backend.py  test_caches.py  test_candidates.py  test_config.py  test_link.py  test_markers.py  test_requirements.py  test_specifiers.py
tests/unit/models/vcs/: test_base.py
tests/unit/project/: test_base.py  test_filters.py
tests/unit/resolver/: test_resolve.py
