[project]
name = "mojo_muse"
version = "0.1.0"
description = "Mojo users will use."
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "rich>=13.5.2",
    "packaging>=23.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.17.5",
    "black[jupyter]>=23.7.0",
    "pytest>=7.4.0",
]
