[project]
name = "mojo_muse"
version = "0.1.0"
description = "Mojo users will use."
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "rich>=13.5.2",
    "packaging>=23.1",
    "requests>=2.31.0",
    "keyring>=24.2.0",
    "truststore>=0.7.0",
    "requests-toolbelt>=1.0.0",
    "CacheControl>=0.13.1",
    "platformdirs>=3.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.17.5",
    "black[jupyter]>=23.7.0",
    "pytest>=7.4.0",
    "art>=6.0",
]
