[project]
name = "mojo_muse"
version = "0.1.0"
description = "Mojo users will use."
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "rich>=13.5.2",
    "packaging>=23.1",
    "requests>=2.31.0",
    "keyring>=24.2.0",
    "truststore>=0.7.0",
    "requests-toolbelt>=1.0.0",
    "CacheControl>=0.13.1",
    "platformdirs>=3.10.0",
    "resolvelib>=1.0.1",
    "semver>=3.0.1",
    "setuptools>=68.1.2",
    "findpython>=0.3.1",
    "mups @ git+https://github.com/drunkwcodes/mups.git",
    "tomli>=2.0.1",
    "pyproject-hooks>=1.0.0",
    "installer>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
muse = "mojo_muse.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.17.5",
    "black[jupyter]>=23.7.0",
    "pytest>=7.4.0",
    "art>=6.0",
    "mkdocs",
    "mkdocstrings>=0.22.0",
    "mkdocs-material",
    "mkdocstrings-python>=1.1.2",
    "towncrier>=23.6.0",
    "ruff>=0.0.285",
    "coverage>=7.3.0",
]

[tool.towncrier]
package = "mojopi"
package_dir = "src"
name = "MojoPI"
directory = "news"
filename = "CHANGELOG.md"

[tool.ruff]
ignore = ["E712", "F401", "E501", "F403", "F405"]

# E712 [*] Comparison to `True` should be `cond is True` or `if cond:`
# F401 [*] `.core.is_valid_name` imported but unused
# E501 Line too long (442 > 88 characters)
# F403 `from peewee import *` used; unable to detect undefined names
# F405 `Model` may be undefined, or defined from star imports
